tests/analyze/remote-misplaced/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: `remote` can only modify a top-level `def`.
> 1 | remote enum color {
      ^^^^^^
